added a service locator interface and its implementation

--- a/EventSourcing.Library/EventSourcing.Library.csproj
+++ b/EventSourcing.Library/EventSourcing.Library.csproj
@@ -55,8 +55,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Command.cs" />
+    <Compile Include="DictionaryBasedLocator.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceLocator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
