fixes for the infrastructure; added a new command and a new event

--- a/EventSourcing.Server/EventSourcing.Server.csproj
+++ b/EventSourcing.Server/EventSourcing.Server.csproj
@@ -56,6 +56,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\CreateProductCommand.cs" />
+    <Compile Include="Data\Product.cs" />
+    <Compile Include="Events\ProductCreatedEvent.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
