Handling the "add inventory" command, including the use of error events

--- a/EventSourcing.Server/EventSourcing.Server.csproj
+++ b/EventSourcing.Server/EventSourcing.Server.csproj
@@ -56,9 +56,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\AddInventoryCommand.cs" />
     <Compile Include="Commands\CreateProductCommand.cs" />
     <Compile Include="Data\Product.cs" />
+    <Compile Include="Events\InvalidQuantityEvent.cs" />
+    <Compile Include="Events\InventoryAddedEvent.cs" />
     <Compile Include="Events\ProductCreatedEvent.cs" />
+    <Compile Include="Events\UnknownProductEvent.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
