--- a/EventSourcing.Library/EventSourcing.Library.csproj
+++ b/EventSourcing.Library/EventSourcing.Library.csproj
@@ -57,6 +57,7 @@
     <Compile Include="DictionaryBasedLocator.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serialization\EventSerializer.cs" />
     <Compile Include="ServiceLocator.cs" />
     <Compile Include="SystemSettings.cs" />
   </ItemGroup>
