--- a/EventSourcing.Server/EventSourcing.Server.csproj
+++ b/EventSourcing.Server/EventSourcing.Server.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Client.cs" />
     <Compile Include="Commands\AddInventoryCommand.cs" />
     <Compile Include="Commands\SellCommand.cs" />
     <Compile Include="Commands\CreateProductCommand.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="Events\UnknownProductEvent.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queries\ListInventoryQuery.cs" />
     <Compile Include="Serialization\BinarySerializer.cs" />
   </ItemGroup>
   <ItemGroup>
