--- a/EventSourcing.Library/EventSourcing.Library.csproj
+++ b/EventSourcing.Library/EventSourcing.Library.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query.cs" />
     <Compile Include="Serialization\EventSerializer.cs" />
+    <Compile Include="Serialization\EventStore.cs" />
     <Compile Include="ServiceLocator.cs" />
     <Compile Include="SystemSettings.cs" />
   </ItemGroup>
