--- a/EventSourcing.Server/EventSourcing.Server.csproj
+++ b/EventSourcing.Server/EventSourcing.Server.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Events\ProductCreatedEvent.cs" />
     <Compile Include="Events\SoldEvent.cs" />
     <Compile Include="Events\UnknownProductEvent.cs" />
+    <Compile Include="FileEventStore.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\ListInventoryQuery.cs" />
