--- a/EventSourcing.Server/EventSourcing.Server.csproj
+++ b/EventSourcing.Server/EventSourcing.Server.csproj
@@ -69,7 +69,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\ListInventoryQuery.cs" />
-    <Compile Include="Serialization\BinarySerializer.cs" />
+    <Compile Include="Services\ConsoleWriter.cs" />
+    <Compile Include="Services\Serialization\BinarySerializer.cs" />
+    <Compile Include="Services\TextWriter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
